refactory class model, migrations db, list users

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
    "ConnectionStrings": {
-    "DefaultConnection": "Data Source=HOANGPROO\\SQLEXPRESS;Initial Catalog=BikeSharingDB;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=HOANGPROO\\SQLEXPRESS;Initial Catalog=BikeSharingDBNew;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
